@@ -1,5 +1,9 @@
 <f:layout name="nodoc" />
 
 <f:section name="main">
-<div id="workspacegrid"></div>
+	<script type="text/javascript">
+		document.domain = '{backendDomain}';
+	</script>
+
+	<div id="workspacegrid"></div>
 </f:section>
