@@ -1,5 +1,6 @@
 2011-02-16 Tolleiv Nietsch <typo3@tolleiv.de>
-
+	
+	* Fixed bug #13003: singleIndex rows not showing up due to browser security violations
 	* Fixed bug #13002: singleIndex page much have invalid workspace id
 
 2011-01-26  Susanne Moog <typo3@susanne-moog.de>
